--- a/client/src/app/pages/chat/chat.component.scss
+++ b/client/src/app/pages/chat/chat.component.scss
@@ -60,3 +60,20 @@
 .message {
 
 }
+
+
+.chat-card-content {
+  padding: 0px 0px 0px 0px !important;
+}
+
+.chat-card-title {
+  padding: 24px 24px 24px 24px !important;
+}
+
+.chat-section {
+  padding: 24px 24px 24px 24px !important;
+}
+
+.chat-card-container {
+  padding: 0px 0px 0px 0px !important;
+}
