--- a/client/src/app/pages/dashboard/dashboard.component.scss
+++ b/client/src/app/pages/dashboard/dashboard.component.scss
@@ -5,4 +5,19 @@
  * @Last Modified time: 2018-06-15 14:12:47
  */
 
+.dashboard-card-content {
+  padding: 0px 0px 0px 0px !important;
+}
+
+.dashboard-card-title {
+  padding: 24px 24px 24px 24px !important;
+}
+
+.dashboard-section {
+  padding: 24px 24px 24px 24px !important;
+}
+
+.dashboard-card-container {
+  padding: 0px 0px 0px 0px !important;
+}
 
