--- a/client/src/app/pages/signin/signin.component.scss
+++ b/client/src/app/pages/signin/signin.component.scss
@@ -28,3 +28,19 @@
 .card-title-small {
   font-size: normal;
 }
+
+.signin-card-content {
+  padding: 0px 0px 0px 0px !important;
+}
+
+.signin-card-title {
+  padding: 24px 24px 24px 24px !important;
+}
+
+.signin-section {
+  padding: 24px 24px 24px 24px !important;
+}
+
+.signin-card-container {
+  padding: 0px 0px 0px 0px !important;
+}
