--- a/client/src/style.scss
+++ b/client/src/style.scss
@@ -68,16 +68,16 @@ ul#nav-mobile.right {
 // }
 
 
-// // Parallax
-// .parallax-container .parallax {
-//   z-index: 2 !important;
-// }
+// Parallax
+.parallax-container .parallax {
+  z-index: 2 !important;
+}
 
-// .parallax img {
-//   width: 100% !important;
-//   // max-width: 800px;
-//   // max-height: 600px;
-// }
+.parallax img {
+  width: 100% !important;
+  // max-width: 800px;
+  // max-height: 600px;
+}
 
 // STYLE
 body {
