--- a/client/src/app/pages/bot/bot.component.scss
+++ b/client/src/app/pages/bot/bot.component.scss
@@ -5,15 +5,18 @@
  * @Last Modified time: 2018-05-27 10:13:15
  */
 
-.thumbnail {
-    max-width: 300px;
-    border-radius: 5px;
+.bot-card-content {
+  padding: 0px 0px 0px 0px !important;
 }
 
-.userInfo {
-    font-size: 18px;
-    color: rgb(75, 75, 75);
-    font-weight: lighter;
+.bot-card-title {
+  padding: 24px 24px 24px 24px !important;
 }
 
-.box-shadow { box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05); }
+.bot-section {
+  padding: 24px 24px 24px 24px !important;
+}
+
+.bot-card-container {
+  padding: 0px 0px 0px 0px !important;
+}
