--- a/client/src/app/pages/channels/channels.component.scss
+++ b/client/src/app/pages/channels/channels.component.scss
@@ -5,51 +5,18 @@
  * @Last Modified time: 2018-05-27 10:13:23
  */
 
-.thumbnail {
-    max-width: 300px;
-    border-radius: 5px;
+.channels-card-content {
+  padding: 0px 0px 0px 0px !important;
 }
 
-.userInfo {
-    font-size: 18px;
-    color: rgb(75, 75, 75);
-    font-weight: lighter;
+.channels-card-title {
+  padding: 24px 24px 24px 24px !important;
 }
 
-// .tabs .tab a{
-//   color:#000;
-// } // Black color to the text*/
-
-// .tabs .tab a:hover {
-//   background-color:#eee;
-//   color:#000;
-// } // Text color on hover*/
-
-// .tabs .tab a.active {
-//   background-color:#888;
-//   color:#000;
-// } // Background and text color when a tab is active*/
-
-// .tabs .indicator li{
-//   position: absolute;
-//   bottom: 0;
-//   height: 2px;
-//   background-color: #01c4ec !important;
-//   will-change: left, right;
-// }
-
-.box-shadow { box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05); }
-
-.tabs .tab a{
-  color:#00ACC1;
+.channels-section {
+  padding: 24px 24px 24px 24px !important;
 }
-.tabs .tab a:hover,.tabs .tab a.active {
-background-color:transparent;
-color:#008B9B;
-}
-.tabs .tab.disabled a,.tabs .tab.disabled a:hover {
-color:rgba(102,147,153,0.7);	
-}
-.tabs .indicator {
-background-color:#009BAD;
+
+.channels-card-container {
+  padding: 0px 0px 0px 0px !important;
 }
