--- a/client/src/app/pages/chat/chat.component.html
+++ b/client/src/app/pages/chat/chat.component.html
@@ -1,58 +1,38 @@
-<div class="card hoverable">
-
-  <div class="card-title blue white-text">Card Title</div>
-  <div class="card-content">
-
-    <div class="section previewSection">
-      <h5>Chat Preview</h5>
-      <div class="row">
-        <div class="col s12">
-          <div class="card-panel z-depth-0 light-green accent-4 chat-preview">
-            <div *ngFor="let msg of chatMessagesContainer">
-
-              <div class="messageBubble">
-                <span class="timeStamp">
-                  <span class="preTimeStamp">{{preTimeStamp}}</span>
-                  <span class="timeStampValue">{{msg.time_stamp}}</span>
-                  <span class="postTimeStamp">{{postTimeStamp}}</span>
-                  <span class="timeStampSeparator">{{timeStampSeparator}}</span>
-                </span>
-
-
-
-
-                <span class="displayName" [style.color]="msg.color">{{msg.display_name}}</span>
-                <span class="displayNameSeparator">{{displayNameSeparator}}</span>
-                <span class="message">{{msg.message}}</span>
+<div class="row">
+  <div class="col s12 m12 chat-card-container">
+    <div class="card chat-card white">
+      <div class="card-content chat-card-content white black-text">
+        <span class="card-title chat-card-title blue-grey white-text">Chat</span>
+        <div class="section chat-section">
+          <h5>Chat Preview</h5>
+          <div class="row">
+            <div class="col s12">
+              <div class="card-panel z-depth-0 light-green accent-4 chat-preview">
+                <div *ngFor="let msg of chatMessagesContainer">
+                  <div class="messageBubble">
+                    <span class="timeStamp">
+                      <span class="preTimeStamp">{{preTimeStamp}}</span>
+                      <span class="timeStampValue">{{msg.time_stamp}}</span>
+                      <span class="postTimeStamp">{{postTimeStamp}}</span>
+                      <span class="timeStampSeparator">{{timeStampSeparator}}</span>
+                    </span>
+                    <span class="displayName" [style.color]="msg.color">{{msg.display_name}}</span>
+                    <span class="displayNameSeparator">{{displayNameSeparator}}</span>
+                    <span class="message">{{msg.message}}</span>
+                  </div>
+                </div>
               </div>
-
-
-
-              <!-- <div class="section">
-                <div>Badges: {{msg.badges}}</div>
-                <div>Color: {{msg.color}}</div>
-                <div>Display name: {{msg.display_name}}</div>
-                <div>Emotes: {{msg.emotes}}</div>
-                <div>Message ID: {{msg.message_id}}</div>
-                <div>Mod: {{msg.mod}}</div>
-                <div>Room ID: {{msg.room_id}}</div>
-                <div>Subscriber: {{msg.subscriber}}</div>
-                <div>Timestamp: {{msg.time_stamp}}</div>
-                <div>Turbo: {{msg.turbo}}</div>
-                <div>User ID: {{msg.user_id}}</div>
-                <div>Type: {{msg.type}}</div>
-                <div>Twitch name: {{msg.twitch_name}}</div>
-                <div>Message: {{msg.message}}</div>
-              </div> -->
             </div>
           </div>
         </div>
+        <div class="divider"></div>
+        <div class="section chat-section">
+          <h5>Chat Settings</h5>
+        </div>
       </div>
     </div>
-    <div class="divider"></div>
-    <div class="section settingsSection">
-      <h5>Chat Settings</h5>
-    </div>
-
   </div>
 </div>
+
+
+
