--- a/client/src/app/pages/landing/landing.component.scss
+++ b/client/src/app/pages/landing/landing.component.scss
@@ -12,3 +12,19 @@
   // max-width: 800px;
   // max-height: 600px;
 }
+
+.landing-card-content {
+  padding: 0px 0px 0px 0px !important;
+}
+
+.landing-card-title {
+  padding: 24px 24px 24px 24px !important;
+}
+
+.landing-section {
+  padding: 24px 24px 24px 24px !important;
+}
+
+.landing-card-container {
+  padding: 0px 0px 0px 0px !important;
+}
