--- a/client/src/app/pages/bits/bits.component.scss
+++ b/client/src/app/pages/bits/bits.component.scss
@@ -55,6 +55,8 @@
   color: #37474F !important;
 }
 
+
+
 .bits-card-content {
   padding: 0px 0px 0px 0px !important;
 }
@@ -69,4 +71,16 @@
 
 .bits-card-container {
   padding: 0px 0px 0px 0px !important;
+}
+
+.bits-user-card-content {
+  padding: 0px;
+}
+
+.bits-user-card-title {
+  padding: 12px 24px 12px 24px;
+}
+
+.bits-card-reveal {
+  padding: 0px 0px 0px 0px;
 }
