--- a/client/src/app/pages/users/users.component.html
+++ b/client/src/app/pages/users/users.component.html
@@ -55,7 +55,7 @@
                         <div class="row">
                           <img class="col s4" src={{user.profile_image_url}}>
                           <div class="col s8">
-                            <p>User id: {{ user.user_id }}</p>
+                            <p>User id: {{ user.id }}</p>
                             <p>User description: {{ user.description }}</p>
                             <p>Broadcaster type: {{ user.broadcaster_type }}</p>
                             <p>Channel view count: {{ user.view_count }}</p>
@@ -123,7 +123,7 @@
                         <div class="row">
                           <img class="col s4" src={{user.profile_image_url}}>
                           <div class="col s8">
-                            <p>User id: {{ user.user_id }}</p>
+                            <p>User id: {{ user.id }}</p>
                             <p>User description: {{ user.description }}</p>
                             <p>Broadcaster type: {{ user.broadcaster_type }}</p>
                             <p>Channel view count: {{ user.view_count }}</p>
